Добавлен контроллер для отображения информации о доставке с интеграцией Yandex Maps. Реализована логика получения координат города и пунктов выдачи, а также обновлены шаблоны для отображения карты и списка адресов. Добавлен API ключ для Yandex Maps в конфигурацию приложения.

--- a/templates/catalog/layouts/footer.html.twig
+++ b/templates/catalog/layouts/footer.html.twig
@@ -51,6 +51,7 @@
         <ul class="space-y-2">
           <li><a href="#" class="text-gray-600 hover:text-blue-600">О нас</a></li>
           <li><a href="#" class="text-gray-600 hover:text-blue-600">Контакты</a></li>
+          <li><a href="{{ path('catalog_dostavka') }}" class="text-gray-600 hover:text-blue-600">Доставка</a></li>
           <li><a href="#" class="text-gray-600 hover:text-blue-600">Карьера</a></li>
           <li><a href="#" class="text-gray-600 hover:text-blue-600">Мой аккаунт</a></li>
           <li><a href="#" class="text-gray-600 hover:text-blue-600">Заказы и возвраты</a></li>
