--- a/templates/components/YandexMap.html.twig
+++ b/templates/components/YandexMap.html.twig
@@ -15,9 +15,14 @@
        data-yandex-map-cluster-options-value='{{ clusterOptions|json_encode(constant("JSON_UNESCAPED_UNICODE"))|e('html_attr') }}'
      {% endif %}
      data-yandex-map-points-value='{{ points|json_encode(constant("JSON_UNESCAPED_UNICODE"))|e('html_attr') }}'
+     {% if deliveryContext is defined and deliveryContext.pickupPointId is defined and deliveryContext.pickupPointId is not null %}
+       data-yandex-map-selected-id-value="{{ deliveryContext.pickupPointId }}"
+     {% elseif selectedId is not null %}
+       data-yandex-map-selected-id-value="{{ selectedId }}"
+     {% endif %}
 ></div>
 
-{% if showList and points is not empty %}
+{#{% if showList and points is not empty %}
   <div class="mt-4">
     <ul class="space-y-2">
       {% for p in points %}
@@ -32,6 +37,6 @@
       {% endfor %}
     </ul>
   </div>
-{% endif %}
+{% endif %}#}
 
 
